Second Webpage Push
Removed excess files, cleaned up appearance of all html pages, removed student-specific buttons, added buttons for weekly and daily view (not fully functional), updated customer model to allow Arduino data storage.

--- a/Final Project Public Webpage/public/index.html
+++ b/Final Project Public Webpage/public/index.html
@@ -15,7 +15,9 @@
 <body>
     <nav class="nav-wrapper bg-az-blue lighten-4" role="navigation">
         <div class="nav-wrapper container">
-            <a id="logo-container" href="index.html" class="left brand-logo valign-wrapper">Home</a>
+            <a id="logo-container" href="references.html">References</a>
+            <a id="logo-container" href="signup.html" >Sign Up</a>
+            <a id="logo-container" href="login.html" >Log In</a>
         </div>
     </nav>
     <div class="container">
@@ -23,7 +25,7 @@
             <div class="row">
                 <div class="col s12">
                     <div class="card-panel">
-                        <h2 class="intro">Welcome!</h3>
+                        <h2 class="intro">Welcome!</h2>
                         <div class="description">
                             <p>This website acts as the final project for ECE 413/513 at the University of Arizona. It allows a user to create an account, register one or 
                                 multiple HeartTracker device(s), and view the output of a given registered device for either the last week or a specific day.</p>
@@ -58,10 +60,13 @@
                         </div>
                     </div>
                     <div class="card-panel">
-                        <h3 class="blue-text text-darken-4">Get Started!</h4>
-                        <div class="collection">
-                            <a href="signup.html" class="collection-item">Sign-up </a>
-                            <a href="login.html" class="collection-item">Log-in </a>
+                        <h3 class="blue-text text-darken-4">Get Started!</h3>
+                        <div>
+                            <p>To start looking through the final project, go to the navigation bar at the top of the webpage and select "Sign Up"; you will be prompted to make
+                                an account, including the ID of your Arduino, so make sure you have that ready. If you already have an account, you can click on "Log In" to move
+                                straight to your main page. If you want to see any third-party resources used in the making of this project, click on "References" to see a full
+                                list!"
+                            </p> 
                         </div>
                     </div>
                 </div>
