--- a/Final Project Public Webpage/public/login.html
+++ b/Final Project Public Webpage/public/login.html
@@ -3,9 +3,7 @@
   <head>
     <title>Log In</title>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <!-- Compiled and minified CSS -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> <!--Initializes scripts to be used with the webpage-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -15,7 +13,7 @@
     <script src="javascripts/login.js"></script>
   </head>
   <body>
-    <nav class="nav-wrapper bg-az-blue lighten-4" role="navigation">
+    <nav class="nav-wrapper bg-az-blue lighten-4" role="navigation"> <!--Creates the navigation bar-->
       <div class="nav-wrapper container">
           <a id="logo-container" href="index.html">Home</a>
           <a id="logo-container" href="signup.html" >Sign Up</a>
@@ -38,11 +36,11 @@
         <button id="btnLogIn">Log In</button>
       </div>
     </div>
-    <div style="display:inline-block; width:45vw; height: 60vh; margin: 2vh 20vw; ">
+    <div style="display:inline-block; width:45vw; height: 60vh; margin: 2vh 20vw; "> <!--Creates the message box to display JSON responses-->
       <label for="rxData">Message: </label>
       <textarea id="rxData" style="width:100%; height:100%"></textarea>
     </div>
-    <footer class="page-footer bg-az-red darken-2">
+    <footer class="page-footer bg-az-red darken-2"> <!--Creates the footer-->
         <div class="footer-copyright">
             <div class="container">
                 &copy; 2024; Quinlan Reed, Simon Ngandu, and Allen Fan
