--- a/Final Project Public Webpage/public/references.html
+++ b/Final Project Public Webpage/public/references.html
@@ -2,10 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <!-- Compiled and minified CSS -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> <!--Initializes scripts to be used with the webpage-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="stylesheets/site.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -13,7 +10,7 @@
     <title>References</title>
 </head>
 <body>
-    <nav class="nav-wrapper bg-az-blue lighten-4" role="navigation">
+    <nav class="nav-wrapper bg-az-blue lighten-4" role="navigation"> <!--Creates the navigation bar-->
         <div class="nav-wrapper container">
             <a id="logo-container" href="index.html">Home</a>
             <a id="logo-container" href="signup.html" >Sign Up</a>
@@ -35,17 +32,22 @@
                             <h4>Scripts</h4>
                             <p>The Materialize script https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js, for use alongisde the css file.</p>
                             <br />
+                            <h4>Arduino Libraries</h4>
+                            <p>Wire.h was used to help the Argon device and the heart rate sensor communicate.</p>
+                            <p>MAX30105.h was used to help control the heart rate sensor.</p>
+                            <p>heartRate.h helps translate the raw data from the sensor into clear heart rate output.</p>
+                            <p>spo2_algorithm.h helps translate the raw data from the sensor into clear blood oxygen level output.</p>
+                            <p>Particle.h is a library that provides a wide variety of basic functions for Particle devices.</p>
                             <h4>Class Activities</h4>
                             <p>Zybooks Lab 4.12, which provided the backbone for the registration system and contributed to mistake highlighting throughout the website.</p>
                             <p>Zybooks Lab 6.5, which led to the initial creation of the AWS server and consistently showed step-by-step instructions on how to work through server management.</p>
-                            
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <footer class="page-footer bg-az-red darken-2">
+    <footer class="page-footer bg-az-red darken-2"> <!--Creates the footer-->
         <div class="footer-copyright">
             <div class="container">
                 &copy; 2024; Quinlan Reed, Simon Ngandu, and Allen Fan
