--- a/Final Project Public Webpage/public/signup.html
+++ b/Final Project Public Webpage/public/signup.html
@@ -15,7 +15,7 @@
     <script src="javascripts/signup.js"></script>
   </head>
   <body>
-    <nav class="nav-wrapper bg-az-blue lighten-4" role="navigation">
+    <nav class="nav-wrapper bg-az-blue lighten-4" role="navigation"> <!--Creates the navigation bar-->
       <div class="nav-wrapper container">
           <a id="logo-container" href="index.html">Home</a>
           <a id="logo-container" href="login.html" >Log In</a>
@@ -55,11 +55,11 @@
         <button id="btnSignUp">Sign Up</button>
       </div>
     </div>
-    <div style="display:inline-block; width:45vw; height: 60vh; margin: 2vh 20vw; ">
+    <div style="display:inline-block; width:45vw; height: 60vh; margin: 2vh 20vw; "> <!--Creates the message box to display JSON responses-->
       <label for="rxData">Message: </label>
       <textarea id="rxData" style="width:100%; height:100%"></textarea>
     </div>
-    <footer class="page-footer bg-az-red darken-2">
+    <footer class="page-footer bg-az-red darken-2"> <!--Creates the footer-->
       <div class="footer-copyright">
           <div class="container">
               &copy; 2024; Quinlan Reed, Simon Ngandu, and Allen Fan
